[project]
name = "great-ape-safe"
version = "0.0.1"
description = "An extension of the legendary Ape Safe web3 package. Adding extra functions and making it protocol aware, saving time getting familiar with the source code of every individual smart contract."
license = "AGPL-3.0-or-later"
authors = ["Gosuto <mail@gosuto.ai>"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
